<resources>
    <!-- Title -->
    <string name="app_name">Popular Movies</string>
    <string name="most_popular_movies_name">Most popular movies</string>
    <string name="top_rated_movies_name">Top rated movies</string>
    <string name="favourite_movies_name">Favourite movies</string>

    <!-- MovieListActivity -->
    <string name="delete_successful">Successfully deleted.</string>
    <string name="unable_to_delete_list_empty">Unable to delete, list is already empty.</string>

    <!-- Detail Acitivity -->
    <string name="title_label">Title:</string>
    <string name="average_vote_label">Average vote:</string>
    <string name="release_date_label">Release date:</string>
    <string name="plot_synopsis_label">Plot synopsis:</string>
    <string name="content_desc_movie_poster">Movie poster</string>
    <string name="content_desc_backdrop_poster">Backdrop poster</string>
    <string name="trailers_label"><u>Trailers</u></string>
    <string name="reviews_label"><u>Reviews</u></string>
    <string name="removed_from_favourite">removed from favourite list.</string>
    <string name="error_occurred">Error occurred. Please try again.</string>
    <string name="failed_to_add_to_favourite">Failed to add to favourite list.</string>
    <string name="added_to_favourite">Added to favourite list.</string>

    <!-- Error messages -->
    <string name="no_connection_message">No internet connection.</string>
    <string name="error_message">An error has occurred. Please try again.</string>
    <string name="internet_connection_required">Internet connection required to update.</string>
    <string name="no_favourites_message">Favourite movie list is empty. Please add a movie to favourite list.</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_delete_all">Delete Favourite List</string>

    <!-- Alert Dialog -->
    <string name="delete_entire_list">Delete your entire favourite movies?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Preference -->
    <string name="pref_most_popular_key" translatable="false">Most popular</string>
    <string name="pref_top_rated_key" translatable="false">Top rated</string>
    <string name="pref_favourite_key" translatable="false">Favourite</string>

    <string name="pref_sort_by_default_value" translatable="false">popular</string>
    <string name="pref_sort_by_popular_value" translatable="false">popular</string>
    <string name="pref_sort_by_top_rated_value" translatable="false">top_rated</string>
    <string name="pref_sort_by_favourite_value" translatable="false">favourite</string>

    <string name="pref_summary_sort_by" translatable="false">%s</string>

    <string name="pref_list_key" translatable="false">prefListKey</string>
    <string name="pref_sort_by" translatable="false">Sort by</string>
</resources>
