<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/iv_detail_backdrop_poster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_backdrop_height"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/content_desc_backdrop_poster"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/detail_nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/detail_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_detail_movie_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc_movie_poster"
                    android:padding="@dimen/detail_movie_poster_padding" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RatingBar
                        android:id="@+id/rb_detail_average_vote"
                        style="?attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/detail_rating_margin"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="0.25" />

                    <TextView
                        android:id="@+id/tv_detail_average_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="@dimen/detail_text_size"
                        tools:text="5/10" />

                    <TextView
                        android:id="@+id/tv_detail_title"
                        style="@style/detail"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        tools:text="TITLE" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/detail_padding_tv"
                        android:text="@string/release_date_label"
                        android:textSize="@dimen/detail_release_date_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_detail_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="@dimen/detail_release_date_text_size"
                        tools:text="Mar 30th, 2018" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                style="@style/detail"
                android:paddingTop="@dimen/detail_padding_tv"
                android:text="@string/plot_synopsis_label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_detail_plot_synopsis"
                style="@style/detail"
                android:paddingBottom="@dimen/detail_padding_tv"
                android:textSize="@dimen/plot_text_size"
                android:textStyle="italic" />

            <!-- Trailers -->
            <View
                android:id="@+id/line_divider_trailers"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/detail_padding_tv"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/detail_trailer_label"
                style="@style/detail"
                android:text="@string/trailers_label"
                android:textSize="@dimen/trailer_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/detail_recyclerview_trailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_padding_tv" />

            <!-- Reviews -->
            <View
                android:id="@+id/line_divider_reviews"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/detail_padding_tv"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/detail_reviews_label"
                style="@style/detail"
                android:text="@string/reviews_label"
                android:textSize="@dimen/trailer_text_size"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/detail_recyclerview_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_padding_tv" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favourite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@drawable/ic_favorite_black_24dp"
        android:tint="@android:color/white"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>
